Added Dice Boost Functionality
Added Dice boost functionality and item

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ GameJame2022/Intermediate/CachedAssetRegistry.bin
 GameJame2022/Intermediate/CachedAssetRegistry.bin
 GameJame2022/Saved/Config/CrashReportClient/UE4CC-Windows-E643430343BD052FB3FDF8AAB37F9E76/CrashReportClient.ini
 GameJame2022/Saved/Config/Windows/Engine.ini
+*.ini
